CPP01 ex04 done

--- a/01/ex04/Makefile
+++ b/01/ex04/Makefile
@@ -2,14 +2,11 @@
 #                                  VARIABLES                                   #
 # ---------------------------------------------------------------------------- #
 
-NAME			:=	violence
+NAME			:=	not_sed
 
 # ---------------------------------- PROGRAM --------------------------------- #
 
 SRC				:=	main.cpp
-SRC				+=	Weapon.cpp
-SRC				+=	HumanA.cpp
-SRC				+=	HumanB.cpp
 
 # --------------------------------- COMMANDS --------------------------------- #
 
