Exo 05 and 06 done

--- a/01/ex06/Makefile
+++ b/01/ex06/Makefile
@@ -2,7 +2,7 @@
 #                                  VARIABLES                                   #
 # ---------------------------------------------------------------------------- #
 
-NAME			:=	harl
+NAME			:=	harlFilter
 
 # ---------------------------------- PROGRAM --------------------------------- #
 
