--- a/04/ex00/Makefile
+++ b/04/ex00/Makefile
@@ -2,10 +2,11 @@ NAME		:=	polymorph
 
 CPP			:=	c++
 
-CPPFLAGS	:=	-Wall 
-CPPFLAGS	+=	-Wextra
-CPPFLAGS	+=	-Werror
-CPPFLAGS	+=	-std=c++98
+CPP_FLAGS	:=	-Wall
+CPP_FLAGS	+=	-Wextra
+CPP_FLAGS	+=	-Werror
+CPP_FLAGS	+=	-std=c++98
+CPP_FLAGS	+=	-g3
 
 SRC			:=	main.cpp
 SRC			+=	Animal.cpp
